--- a/.htaccess
+++ b/.htaccess
@@ -1,11 +1,6 @@
-# mod_rewrite starts here 
-
-RewriteEngine on
-
+RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-d
-
-RewriteCond %{REQUEST_FILENAME}\.html -f 
-
- RewriteRule ^(.*)$ $1.html
+RewriteCond %{REQUEST_FILENAME}\.html -f
+RewriteRule ^(.*)$ $1.html
 
 
